Moved getInt, getShort and getString into BufferUtilities.cpp
git-svn-id: svn://70.113.44.214/VanaMirror/trunk@11 09c1253f-3d09-8e40-9719-4320e56601b5

--- a/MapleStoryServer/MapleStoryServer.vcproj
+++ b/MapleStoryServer/MapleStoryServer.vcproj
@@ -348,6 +348,14 @@
 					>
 				</File>
 			</Filter>
+			<Filter
+				Name="Utilities"
+				>
+				<File
+					RelativePath=".\BufferUtilities.cpp"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="Header Files"
@@ -511,6 +519,14 @@
 				>
 				<File
 					RelativePath=".\Timer.h"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="Utilities"
+				>
+				<File
+					RelativePath=".\BufferUtilities.h"
 					>
 				</File>
 			</Filter>
