--- a/MapleStoryServer/MapleStoryServer.vcproj
+++ b/MapleStoryServer/MapleStoryServer.vcproj
@@ -355,6 +355,10 @@
 					RelativePath=".\BufferUtilities.cpp"
 					>
 				</File>
+				<File
+					RelativePath=".\TimeUtilities.cpp"
+					>
+				</File>
 			</Filter>
 		</Filter>
 		<Filter
@@ -527,6 +531,10 @@
 				>
 				<File
 					RelativePath=".\BufferUtilities.h"
+					>
+				</File>
+				<File
+					RelativePath=".\TimeUtilities.h"
 					>
 				</File>
 			</Filter>
