Converted toLow case switching function (char*) to tolower and placed it in CharUtilities.cpp
git-svn-id: svn://70.113.44.214/VanaMirror/trunk@20 09c1253f-3d09-8e40-9719-4320e56601b5

--- a/MapleStoryServer/MapleStoryServer.vcproj
+++ b/MapleStoryServer/MapleStoryServer.vcproj
@@ -356,6 +356,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\CharUtilities.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\TimeUtilities.cpp"
 					>
 				</File>
@@ -531,6 +535,10 @@
 				>
 				<File
 					RelativePath=".\BufferUtilities.h"
+					>
+				</File>
+				<File
+					RelativePath=".\CharUtilities.h"
 					>
 				</File>
 				<File
