Added Fame support
Packet Data Provider(s): KilledWhale, Stefkeh
Coder(s):  MooMoo, Wafles
Fixer(s): Zinmirai

git-svn-id: https://dev.chiasoft.net:8443/svn/svn_vana/trunk@34 23f3cdc0-e6d1-42be-a0c1-51f4125517bb

--- a/MapleStoryServer/MapleStoryServer.vcproj
+++ b/MapleStoryServer/MapleStoryServer.vcproj
@@ -204,6 +204,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\Fame.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\Inventory.cpp"
 					>
 				</File>
@@ -265,6 +269,10 @@
 				>
 				<File
 					RelativePath=".\DropsPacket.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\FamePacket.cpp"
 					>
 				</File>
 				<File
@@ -374,6 +382,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\Fame.h"
+					>
+				</File>
+				<File
 					RelativePath=".\Inventory.h"
 					>
 				</File>
@@ -439,6 +451,10 @@
 				>
 				<File
 					RelativePath=".\DropsPacket.h"
+					>
+				</File>
+				<File
+					RelativePath=".\FamePacket.h"
 					>
 				</File>
 				<File
