Moved equipment data to PlayerPacketHelper. A PacketHelper is basically a function which adds some value to a packet which can be called from different packet functions.
git-svn-id: https://dev.chiasoft.net:8443/svn/svn_vana/trunk@44 23f3cdc0-e6d1-42be-a0c1-51f4125517bb

--- a/MapleStoryServer/MapleStoryServer.vcproj
+++ b/MapleStoryServer/MapleStoryServer.vcproj
@@ -323,6 +323,14 @@
 					RelativePath=".\SkillsPacket.cpp"
 					>
 				</File>
+				<Filter
+					Name="Helpers"
+					>
+					<File
+						RelativePath=".\PlayerPacketHelper.cpp"
+						>
+					</File>
+				</Filter>
 			</Filter>
 			<Filter
 				Name="DataBaseLoading"
@@ -505,6 +513,14 @@
 					RelativePath=".\SkillsPacket.h"
 					>
 				</File>
+				<Filter
+					Name="Helpers"
+					>
+					<File
+						RelativePath=".\PlayerPacketHelper.h"
+						>
+					</File>
+				</Filter>
 			</Filter>
 			<Filter
 				Name="LoginServer"
