Replaced the original mysql wrapper with mysql++. A lot of things break right now
git-svn-id: svn://70.113.44.214/VanaMirror/trunk@57 09c1253f-3d09-8e40-9719-4320e56601b5

--- a/MapleStoryServer/MapleStoryServer.vcproj
+++ b/MapleStoryServer/MapleStoryServer.vcproj
@@ -60,7 +60,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="ws2_32.lib libmysql.lib"
+				AdditionalDependencies="ws2_32.lib libmysql.lib mysqlpp.lib"
 				LinkIncremental="2"
 				GenerateDebugInformation="true"
 				SubSystem="1"
@@ -116,7 +116,7 @@
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
-				RuntimeLibrary="0"
+				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
@@ -133,7 +133,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="ws2_32.lib libmysql.lib"
+				AdditionalDependencies="ws2_32.lib libmysql.lib mysqlpp.lib"
 				LinkIncremental="1"
 				GenerateDebugInformation="true"
 				SubSystem="1"
