Constantized login packet headers
git-svn-id: https://dev.chiasoft.net:8443/svn/svn_vana/trunk@98 23f3cdc0-e6d1-42be-a0c1-51f4125517bb

--- a/MapleStoryServer.vcproj
+++ b/MapleStoryServer.vcproj
@@ -567,6 +567,18 @@
 						>
 					</File>
 				</Filter>
+				<Filter
+					Name="Headers"
+					>
+					<File
+						RelativePath=".\src\RecvHeader.h"
+						>
+					</File>
+					<File
+						RelativePath=".\src\SendHeader.h"
+						>
+					</File>
+				</Filter>
 			</Filter>
 			<Filter
 				Name="LoginServer"
