--- a/LoginServer.vcproj
+++ b/LoginServer.vcproj
@@ -182,6 +182,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\src\Common\AbstractServer.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\LoginServer\main.cpp"
 				>
 			</File>
@@ -295,6 +299,10 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\src\Common\AbstractServer.h"
+				>
+			</File>
 			<Filter
 				Name="DataBaseManager"
 				>
