Added ChannelServer class which extends AbstractServer
git-svn-id: https://dev.chiasoft.net:8443/svn/svn_vana/trunk@128 23f3cdc0-e6d1-42be-a0c1-51f4125517bb

--- a/ChannelServer.vcproj
+++ b/ChannelServer.vcproj
@@ -180,12 +180,20 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath=".\src\ChannelServer\ChannelServer.cpp"
+				RelativePath=".\src\Common\AbstractServer.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\ChannelServer\main_channel.cpp"
 				>
 			</File>
 			<Filter
 				Name="ChannelServer"
 				>
+				<File
+					RelativePath=".\src\ChannelServer\ChannelServer.cpp"
+					>
+				</File>
 				<File
 					RelativePath=".\src\ChannelServer\Drops.cpp"
 					>
@@ -405,9 +413,17 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\src\Common\AbstractServer.h"
+				>
+			</File>
 			<Filter
 				Name="ChannelServer"
 				>
+				<File
+					RelativePath=".\src\ChannelServer\ChannelServer.h"
+					>
+				</File>
 				<File
 					RelativePath=".\src\ChannelServer\Drops.h"
 					>
