Moved Timer to Common and added Timer to LoginServer
git-svn-id: https://dev.chiasoft.net:8443/svn/svn_vana/trunk@133 23f3cdc0-e6d1-42be-a0c1-51f4125517bb

--- a/ChannelServer.vcproj
+++ b/ChannelServer.vcproj
@@ -343,7 +343,7 @@
 				Name="Timer"
 				>
 				<File
-					RelativePath=".\src\ChannelServer\Timer.cpp"
+					RelativePath=".\src\Common\Timer.cpp"
 					>
 				</File>
 			</Filter>
@@ -589,7 +589,7 @@
 				Name="Timer"
 				>
 				<File
-					RelativePath=".\src\ChannelServer\Timer.h"
+					RelativePath=".\src\Common\Timer.h"
 					>
 				</File>
 			</Filter>
