--- a/LoginServer.vcproj
+++ b/LoginServer.vcproj
@@ -182,10 +182,6 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath=".\src\Common\AbstractServer.cpp"
-				>
-			</File>
-			<File
 				RelativePath=".\src\LoginServer\main_login.cpp"
 				>
 			</File>
@@ -301,16 +297,20 @@
 					>
 				</File>
 			</Filter>
+			<Filter
+				Name="Abstracts"
+				>
+				<File
+					RelativePath=".\src\Common\AbstractServer.cpp"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="Header Files"
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
-			<File
-				RelativePath=".\src\Common\AbstractServer.h"
-				>
-			</File>
 			<Filter
 				Name="DataBaseManager"
 				>
@@ -403,10 +403,6 @@
 				Name="Connection"
 				>
 				<File
-					RelativePath=".\src\Common\Connection\AbstractPlayer.h"
-					>
-				</File>
-				<File
 					RelativePath=".\src\Common\Connection\Acceptor.h"
 					>
 				</File>
@@ -440,6 +436,18 @@
 				>
 				<File
 					RelativePath=".\src\Common\Timer.h"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="Abstracts"
+				>
+				<File
+					RelativePath=".\src\Common\Connection\AbstractPlayer.h"
+					>
+				</File>
+				<File
+					RelativePath=".\src\Common\AbstractServer.h"
 					>
 				</File>
 			</Filter>
