Cleaned up AbstractPlayer
git-svn-id: https://dev.chiasoft.net:8443/svn/svn_vana/trunk@145 23f3cdc0-e6d1-42be-a0c1-51f4125517bb

--- a/LoginServer.vcproj
+++ b/LoginServer.vcproj
@@ -301,6 +301,10 @@
 				Name="Abstracts"
 				>
 				<File
+					RelativePath=".\src\Common\AbstractPlayer.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\Common\AbstractServer.cpp"
 					>
 				</File>
@@ -443,7 +447,7 @@
 				Name="Abstracts"
 				>
 				<File
-					RelativePath=".\src\Common\Connection\AbstractPlayer.h"
+					RelativePath=".\src\Common\AbstractPlayer.h"
 					>
 				</File>
 				<File
