--- a/ChannelServer.vcproj
+++ b/ChannelServer.vcproj
@@ -407,6 +407,10 @@
 				Name="Abstracts"
 				>
 				<File
+					RelativePath=".\src\Common\AbstractPlayer.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\Common\AbstractServer.cpp"
 					>
 				</File>
@@ -645,7 +649,7 @@
 				Name="Abstracts"
 				>
 				<File
-					RelativePath=".\src\Common\Connection\AbstractPlayer.h"
+					RelativePath=".\src\Common\AbstractPlayer.h"
 					>
 				</File>
 				<File
