--- a/LoginServer.vcproj
+++ b/LoginServer.vcproj
@@ -455,6 +455,14 @@
 					>
 				</File>
 			</Filter>
+			<Filter
+				Name="ServerToServer"
+				>
+				<File
+					RelativePath=".\src\Common\ServerPlayer.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 	</Files>
 	<Globals>
