Added connector (untested)
git-svn-id: https://dev.chiasoft.net:8443/svn/svn_vana/trunk@175 23f3cdc0-e6d1-42be-a0c1-51f4125517bb

--- a/ChannelServer.vcproj
+++ b/ChannelServer.vcproj
@@ -379,6 +379,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\Common\Connection\Connector.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\Common\Connection\PacketHandler.cpp"
 					>
 				</File>
@@ -618,6 +622,10 @@
 				>
 				<File
 					RelativePath=".\src\Common\Connection\Acceptor.h"
+					>
+				</File>
+				<File
+					RelativePath=".\src\Common\Connection\Connector.h"
 					>
 				</File>
 				<File
