--- a/LoginServer.vcproj
+++ b/LoginServer.vcproj
@@ -265,6 +265,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\Common\Connection\Connector.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\Common\Connection\PacketHandler.cpp"
 					>
 				</File>
@@ -408,6 +412,10 @@
 				>
 				<File
 					RelativePath=".\src\Common\Connection\Acceptor.h"
+					>
+				</File>
+				<File
+					RelativePath=".\src\Common\Connection\Connector.h"
 					>
 				</File>
 				<File
