WorldServer can now get the world id of the world it's handling from the LoginServer.
git-svn-id: svn://70.113.44.214/VanaMirror/trunk@217 09c1253f-3d09-8e40-9719-4320e56601b5

--- a/WorldServer.vcproj
+++ b/WorldServer.vcproj
@@ -299,6 +299,14 @@
 					RelativePath=".\src\WorldServer\WorldServerAcceptPlayer.cpp"
 					>
 				</File>
+				<Filter
+					Name="Handlers"
+					>
+					<File
+						RelativePath=".\src\WorldServer\LoginServerConnectHandler.cpp"
+						>
+					</File>
+				</Filter>
 			</Filter>
 		</Filter>
 		<Filter
@@ -433,6 +441,14 @@
 					RelativePath=".\src\WorldServer\WorldServerAcceptPlayer.h"
 					>
 				</File>
+				<Filter
+					Name="Handlers"
+					>
+					<File
+						RelativePath=".\src\WorldServer\LoginServerConnectHandler.h"
+						>
+					</File>
+				</Filter>
 			</Filter>
 		</Filter>
 	</Files>
