--- a/LoginServer.vcproj
+++ b/LoginServer.vcproj
@@ -235,6 +235,10 @@
 				<Filter
 					Name="ServerToServer"
 					>
+					<File
+						RelativePath=".\src\LoginServer\WorldServerPacket.cpp"
+						>
+					</File>
 				</Filter>
 			</Filter>
 			<Filter
@@ -373,6 +377,10 @@
 				<Filter
 					Name="ServerToServer"
 					>
+					<File
+						RelativePath=".\src\LoginServer\WorldServerPacket.h"
+						>
+					</File>
 				</Filter>
 			</Filter>
 			<Filter
