WorldServer now get port from LoginServer
git-svn-id: svn://70.113.44.214/VanaMirror/trunk@219 09c1253f-3d09-8e40-9719-4320e56601b5

--- a/conf/worlds.lua.sample
+++ b/conf/worlds.lua.sample
@@ -10,9 +10,12 @@ world0_id = 0;
 --  2 = N
 --  3 = H
 world0_ribbon = 0;
+-- What port should the world server listen on?
+world0_port = 7100;
 
 -- Uncomment for another world
 -- world1_name = "Bera";
 -- world1_channels = 1;
 -- world1_id = 1;
 -- world1_ribbon = 2;
+-- world1_port = 7200;
