Renamed WorldServerPacket to LoginServerAcceptPlayerPacket
git-svn-id: https://dev.chiasoft.net:8443/svn/svn_vana/trunk@221 23f3cdc0-e6d1-42be-a0c1-51f4125517bb

--- a/LoginServer.vcproj
+++ b/LoginServer.vcproj
@@ -236,7 +236,7 @@
 					Name="ServerToServer"
 					>
 					<File
-						RelativePath=".\src\LoginServer\WorldServerPacket.cpp"
+						RelativePath=".\src\LoginServer\LoginServerAcceptPlayerPacket.cpp"
 						>
 					</File>
 				</Filter>
@@ -378,7 +378,7 @@
 					Name="ServerToServer"
 					>
 					<File
-						RelativePath=".\src\LoginServer\WorldServerPacket.h"
+						RelativePath=".\src\LoginServer\LoginServerAcceptPlayerPacket.h"
 						>
 					</File>
 				</Filter>
