LoginServer now registers each channel server
git-svn-id: svn://70.113.44.214/VanaMirror/trunk@235 09c1253f-3d09-8e40-9719-4320e56601b5

--- a/LoginServer.vcproj
+++ b/LoginServer.vcproj
@@ -328,6 +328,14 @@
 					RelativePath=".\src\LoginServer\LoginServerAcceptPlayer.cpp"
 					>
 				</File>
+				<Filter
+					Name="Handlers"
+					>
+					<File
+						RelativePath=".\src\LoginServer\LoginServerAcceptHandler.cpp"
+						>
+					</File>
+				</Filter>
 			</Filter>
 		</Filter>
 		<Filter
@@ -502,6 +510,14 @@
 					RelativePath=".\src\Common\ServerPlayer.h"
 					>
 				</File>
+				<Filter
+					Name="Handlers"
+					>
+					<File
+						RelativePath=".\src\LoginServer\LoginServerAcceptHandler.h"
+						>
+					</File>
+				</Filter>
 			</Filter>
 		</Filter>
 	</Files>
