Added change channel support
git-svn-id: svn://70.113.44.214/VanaMirror/trunk@247 09c1253f-3d09-8e40-9719-4320e56601b5

--- a/ChannelServer.vcproj
+++ b/ChannelServer.vcproj
@@ -329,6 +329,10 @@
 						RelativePath=".\src\Common\AuthenticationPacket.cpp"
 						>
 					</File>
+					<File
+						RelativePath=".\src\ChannelServer\WorldServerConnectPlayerPacket.cpp"
+						>
+					</File>
 				</Filter>
 			</Filter>
 			<Filter
@@ -609,6 +613,10 @@
 					>
 					<File
 						RelativePath=".\src\Common\AuthenticationPacket.h"
+						>
+					</File>
+					<File
+						RelativePath=".\src\ChannelServer\WorldServerConnectPlayerPacket.h"
 						>
 					</File>
 				</Filter>
