Inter-channel find
git-svn-id: https://dev.chiasoft.net:8443/svn/svn_vana/trunk@266 23f3cdc0-e6d1-42be-a0c1-51f4125517bb

--- a/WorldServer.vcproj
+++ b/WorldServer.vcproj
@@ -191,6 +191,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\WorldServer\Players.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\WorldServer\WorldServer.cpp"
 					>
 				</File>
@@ -374,6 +378,10 @@
 				>
 				<File
 					RelativePath=".\src\WorldServer\Channels.h"
+					>
+				</File>
+				<File
+					RelativePath=".\src\WorldServer\Players.h"
 					>
 				</File>
 				<File
