Fixed bug where the world server allow anyone to connect without doing any basic checking
git-svn-id: https://dev.chiasoft.net:8443/svn/svn_vana/trunk@277 23f3cdc0-e6d1-42be-a0c1-51f4125517bb

--- a/ChannelServer.vcproj
+++ b/ChannelServer.vcproj
@@ -190,6 +190,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\ChannelServer\Connectable.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\ChannelServer\Drops.cpp"
 					>
 				</File>
@@ -453,6 +457,10 @@
 				>
 				<File
 					RelativePath=".\src\ChannelServer\ChannelServer.h"
+					>
+				</File>
+				<File
+					RelativePath=".\src\ChannelServer\Connectable.h"
 					>
 				</File>
 				<File
