Password hashing (original patch by zinmirai, modified by me)
git-svn-id: svn://70.113.44.214/VanaMirror/trunk@281 09c1253f-3d09-8e40-9719-4320e56601b5

--- a/LoginServer.vcproj
+++ b/LoginServer.vcproj
@@ -268,6 +268,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\Common\sha1.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\Common\TimeUtilities.cpp"
 					>
 				</File>
@@ -451,6 +455,10 @@
 				</File>
 				<File
 					RelativePath=".\src\Common\CharUtilities.h"
+					>
+				</File>
+				<File
+					RelativePath=".\src\Common\sha1.h"
 					>
 				</File>
 				<File
