Using Mersenne Twister RNG
git-svn-id: https://dev.chiasoft.net:8443/svn/svn_vana/trunk@282 23f3cdc0-e6d1-42be-a0c1-51f4125517bb

--- a/LoginServer.vcproj
+++ b/LoginServer.vcproj
@@ -268,6 +268,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\Common\Randomizer.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\Common\sha1.cpp"
 					>
 				</File>
@@ -455,6 +459,10 @@
 				</File>
 				<File
 					RelativePath=".\src\Common\CharUtilities.h"
+					>
+				</File>
+				<File
+					RelativePath=".\src\Common\Randomizer.h"
 					>
 				</File>
 				<File
