--- a/WorldServer.vcproj
+++ b/WorldServer.vcproj
@@ -243,6 +243,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\Common\Randomizer.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\Common\TimeUtilities.cpp"
 					>
 				</File>
@@ -398,6 +402,10 @@
 				</File>
 				<File
 					RelativePath=".\src\Common\CharUtilities.h"
+					>
+				</File>
+				<File
+					RelativePath=".\src\Common\Randomizer.h"
 					>
 				</File>
 				<File
