--- a/ChannelServer.vcproj
+++ b/ChannelServer.vcproj
@@ -378,6 +378,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\Common\Randomizer.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\Common\TimeUtilities.cpp"
 					>
 				</File>
@@ -649,6 +653,10 @@
 				</File>
 				<File
 					RelativePath=".\src\Common\CharUtilities.h"
+					>
+				</File>
+				<File
+					RelativePath=".\src\Common\Randomizer.h"
 					>
 				</File>
 				<File
